--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-lib": "ng-packagr -p super-lib/package.json"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
     "rxjs": "~6.6.0",
+    "super-lib": "file:super-lib/dist",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -37,8 +39,10 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^12.0.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
+    "tsickle": "^0.39.1",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
   }
